Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-1347] added support of hostnames and keys with spaces in sender input file (Sasha)
 - [ZBX-2189] fixed compilation under AIX 5.3 (Sasha)
 - [ZBX-1229] added comparison between IPv4, IPv4-mapped and IPv4-compatible allowed server addresses (Dmitry)
 - [ZBX-1949] fixed "housekeeping" procedure for the table "housekeeper" itself, added configuration parameter "MaxHousekeeperDelete" for the server (Dmitry)
 - [ZBX-2173] fixed too long URL for webgraph when many websteps are defined (Vedmak)
 - [ZBX-2139] fixed collecting of active checks after configured with user macro (Sasha)
 - [ZBXNEXT-238] added a command line option to zabbix_sender to send metrics in real time when reading from stdin (asaveljevs)
 - [ZBX-1000] enabled zabbix_sender to read its input from stdin; thanks to leo (asaveljevs)
 - [ZBX-2011] fixed e-mail sending format to meet 'SMTP/MIME e-mail' standards since UTF-8 is used. Thanks to Olexiy Zagorskiy. (Dmitry)
 - [ZBX-2136] fixed handling of logitems with logtimefmt in db cache (asaveljevs)
 - [ZBX-2193] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2185] added view of parent template of linked template to host (Aly)
 - [ZBX-2179] fixed errors connected with Triggers Info screen element (Vedmak)
 - [ZBX-2184] added maintenance info to dashboard latest issues (Aly)
 - [ZBX-1772] changed frontend timezone to match PHP server (Aly)
 - [DEV-455] added configurable filter to "Status of triggers" screen element (Aly)
 - [DEV-454] implemented screen export (Aly)
 - [ZBX-2144] fixed internal and aggregate checks for hosts monitored by a proxy (asaveljevs)
 - [ZBX-2052] fixed sending of regexps to agents (asaveljevs,Sasha)
 - [ZBX-2129] fixed links from monitoring to configuration when All nodes are selected (Vedmak)